[gd_scene load_steps=24 format=2]

[ext_resource path="res://Tilesets/NewMap.tres" type="TileSet" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Player2.tscn" type="PackedScene" id=3]
[ext_resource path="res://MainGame/MainGame.gd" type="Script" id=4]
[ext_resource path="res://Items/ItemBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player/Player3.tscn" type="PackedScene" id=6]
[ext_resource path="res://Materials/stringstar fields/background_1.png" type="Texture" id=7]
[ext_resource path="res://Materials/stringstar fields/background_2.png" type="Texture" id=8]
[ext_resource path="res://Materials/stringstar fields/background_0.png" type="Texture" id=9]
[ext_resource path="res://Materials/stringstar fields/deco1.png" type="Texture" id=10]
[ext_resource path="res://Materials/stringstar fields/plant2.png" type="Texture" id=11]
[ext_resource path="res://Materials/stringstar fields/rock.png" type="Texture" id=12]
[ext_resource path="res://Materials/stringstar fields/deco2.png" type="Texture" id=13]
[ext_resource path="res://Materials/stringstar fields/plant1.png" type="Texture" id=14]
[ext_resource path="res://Particles/fireflies.tscn" type="PackedScene" id=15]
[ext_resource path="res://Player/Player4.tscn" type="PackedScene" id=16]
[ext_resource path="res://UI/Lives.tscn" type="PackedScene" id=17]
[ext_resource path="res://Materials/Iceland Theme.wav" type="AudioStream" id=21]
[ext_resource path="res://fonts/compass-pro-v1.1/CompassPro.otf" type="DynamicFontData" id=22]
[ext_resource path="res://Materials/Fruit collect 1.wav" type="AudioStream" id=23]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1
light_mode = 2

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1
light_mode = 1

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 22 )

[node name="MainGame" type="Node2D"]
position = Vector2( 0.971313, -2.67352 )
script = ExtResource( 4 )

[node name="Background1" type="Sprite" parent="."]
position = Vector2( 501.196, 302.733 )
scale = Vector2( 3.48003, 3.35804 )
texture = ExtResource( 9 )

[node name="Background2" type="Sprite" parent="."]
position = Vector2( 500.011, 288.177 )
scale = Vector2( 3.47547, 3.6127 )
texture = ExtResource( 7 )

[node name="Background3" type="Sprite" parent="."]
modulate = Color( 0.0862745, 0.501961, 0.423529, 0.658824 )
position = Vector2( 501.427, 279.743 )
scale = Vector2( 3.4853, 3.68603 )
texture = ExtResource( 8 )

[node name="Background4" type="Sprite" parent="."]
modulate = Color( 0.380392, 0.0862745, 0.501961, 0.658824 )
position = Vector2( 500.633, 335.302 )
rotation = 3.14159
scale = Vector2( 3.4853, 3.68603 )
texture = ExtResource( 8 )

[node name="Particles2D" parent="." instance=ExtResource( 15 )]
position = Vector2( 500, 300 )
scale = Vector2( 1, 1 )
amount = 300
visibility_rect = Rect2( -500, -400, 1000, 800 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 0, 1 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, -1610612736, 0, -65526, 0, 0, -65525, 1, 0, -65524, 1, 0, -65523, 1, 0, -65522, 2, 0, -65519, 0, 0, -65518, 1, 0, -65517, 1, 0, -65516, 2, 0, -65510, 0, 0, -65509, 1, 0, -65508, 1, 0, -65507, 1, 0, -65506, 1, 0, -65505, 1, 0, 0, -1073741820, 0, 1, -1073741820, 0, 2, 1610612739, 0, 3, -1073741820, 0, 4, 5, 0, 10, 3, 0, 11, -1073741820, 0, 12, -1073741820, 0, 13, -1073741820, 0, 14, 1610612739, 0, 17, 1610612741, 0, 18, -1073741820, 0, 19, -1073741820, 0, 20, 5, 0, 26, 1610612738, 0, 27, 1610612737, 0, 28, 3, 0, 29, 4, 0, 30, 1610612741, 0, 31, -1610612735, 0, 65536, 1610612740, 0, 65537, 1610612740, 0, 65538, 1610612739, 0, 65539, 1610612737, 0, 65540, 1610612736, 0, 65546, 3, 0, 65547, 1610612740, 0, 65548, 1610612740, 0, 65549, 1610612740, 0, 65550, 1610612739, 0, 65553, 1610612741, 0, 65554, 1610612740, 0, 65555, 1610612740, 0, 65556, 5, 0, 65564, 1610612738, 0, 65565, 1610612737, 0, 65566, 1610612741, 0, 65567, -1610612735, 0, 131072, -1610612732, 0, 131073, 1610612737, 0, 131074, 1610612736, 0, 131082, 3, 0, 131083, 1610612740, 0, 131084, 1610612740, 0, 131085, 1610612740, 0, 131086, 1610612739, 0, 131089, 1610612741, 0, 131090, 1610612740, 0, 131091, 1610612740, 0, 131092, 5, 0, 131102, 3, 0, 131103, -1610612735, 0, 196608, 1610612736, 0, 196618, -1073741824, 0, 196619, -1073741821, 0, 196620, -1073741821, 0, 196621, -1073741821, 0, 196622, 1610612736, 0, 196625, 1610612738, 0, 196626, -1073741821, 0, 196627, -1073741821, 0, 196628, 1610612736, 0, 196638, -1073741824, 0, 196639, 1610612736, 0, 262146, 7, 0, 262147, 7, 0, 262168, 7, 0, 262169, 7, 0, 262170, 7, 0, 393228, 6, 0, 393229, 7, 0, 393230, 7, 0, 393231, 7, 0, 393232, 7, 0, 393233, 7, 0, 524287, 7, 0, 458752, 7, 0, 458753, 7, 0, 458754, 7, 0, 458755, 7, 0, 458779, 7, 0, 458780, 7, 0, 458781, 7, 0, 458782, 7, 0, 589823, 0, 0, 524288, -1610612736, 0, 524295, 8, 0, 524296, 8, 0, 524310, 8, 0, 524311, 8, 0, 524319, 0, 0, 524320, 2, 0, 655359, 3, 0, 589824, 1610612739, 0, 589855, 1610612741, 0, 589856, 5, 0, 720895, 3, 0, 655360, 5, 0, 655391, 1610612741, 0, 655392, 5, 0, 786431, 3, 0, 720896, 5, 0, 720927, 3, 0, 720928, 5, 0, 851967, 3, 0, 786432, 5, 0, 786441, 7, 0, 786442, 7, 0, 786443, 7, 0, 786451, 7, 0, 786452, 7, 0, 786453, 7, 0, 786463, 3, 0, 786464, 5, 0, 917503, 1610612738, 0, 851968, -1610612734, 0, 851999, 1610612738, 0, 852000, -1610612734, 0, 983046, 8, 0, 983047, 8, 0, 983062, 8, 0, 983063, 8, 0, 1179648, 1, 0, 1179649, 1, 0, 1179650, 1, 0, 1179651, 1, 0, 1179652, 2, 0, 1179657, 0, 0, 1179658, 1, 0, 1179659, 1, 0, 1179660, 1, 0, 1179661, 1, 0, 1179662, 2, 0, 1179665, -1073741822, 0, 1179666, -1073741819, 0, 1179667, 1, 0, 1179668, 1, 0, 1179669, 2, 0, 1179674, 0, 0, 1179675, 1, 0, 1179676, 1, 0, 1179677, 1, 0, 1179678, 1, 0, 1179679, 1, 0, 1179680, 1, 0 )

[node name="Node" type="Node" parent="."]

[node name="Plant4" type="Sprite" parent="Node"]
position = Vector2( 330.053, 391.509 )
scale = Vector2( 1.36851, 1.07385 )
texture = ExtResource( 11 )

[node name="Plant5" type="Sprite" parent="Node"]
position = Vector2( 12.2846, 227.307 )
scale = Vector2( 1.36851, 1.07385 )
texture = ExtResource( 11 )

[node name="Plant7" type="Sprite" parent="Node"]
position = Vector2( 855.669, 133.051 )
scale = Vector2( 1.36851, 1.07385 )
texture = ExtResource( 11 )

[node name="Plant8" type="Sprite" parent="Node"]
position = Vector2( 65.6475, 555.586 )
scale = Vector2( 1.59349, 1.6961 )
texture = ExtResource( 11 )

[node name="Plant10" type="Sprite" parent="Node"]
modulate = Color( 0.760784, 1, 0.0980392, 1 )
material = SubResource( 1 )
position = Vector2( 966.055, 563.918 )
scale = Vector2( 2.87012, 2.57569 )
texture = ExtResource( 11 )

[node name="Plant11" type="Sprite" parent="Node"]
modulate = Color( 0.862745, 1, 0.0784314, 1 )
material = SubResource( 2 )
position = Vector2( 527.943, 557.968 )
scale = Vector2( 2.13445, 1.71569 )
texture = ExtResource( 11 )

[node name="Plant13" type="Sprite" parent="Node"]
modulate = Color( 0.862745, 1, 0.0784314, 1 )
material = SubResource( 2 )
position = Vector2( 595.755, 316.164 )
scale = Vector2( 2.13445, 1.71569 )
texture = ExtResource( 11 )

[node name="Plant18" type="Sprite" parent="Node"]
modulate = Color( 0.862745, 1, 0.0784314, 1 )
material = SubResource( 2 )
position = Vector2( 22.0159, 231.528 )
scale = Vector2( 1.29445, 1.71569 )
texture = ExtResource( 11 )

[node name="Plant15" type="Sprite" parent="Node"]
modulate = Color( 0.862745, 1, 0.0784314, 1 )
material = SubResource( 2 )
position = Vector2( 554.998, 610.85 )
scale = Vector2( 2.13445, 1.71569 )
texture = ExtResource( 11 )
offset = Vector2( -12.7825, -12.5 )

[node name="Plant16" type="Sprite" parent="Node"]
modulate = Color( 0.862745, 1, 0.0784314, 1 )
material = SubResource( 2 )
position = Vector2( 978.269, 580.208 )
scale = Vector2( 2.13445, 1.71569 )
texture = ExtResource( 11 )
offset = Vector2( -12.7825, -12.5 )

[node name="Plant17" type="Sprite" parent="Node"]
modulate = Color( 0.862745, 1, 0.0784314, 1 )
material = SubResource( 2 )
position = Vector2( 109.961, 582.589 )
scale = Vector2( 1.37445, 1.71569 )
texture = ExtResource( 11 )
offset = Vector2( -12.7825, -12.5 )

[node name="Plant14" type="Sprite" parent="Node"]
modulate = Color( 0.862745, 1, 0.0784314, 1 )
material = SubResource( 2 )
position = Vector2( 500.153, 586.837 )
scale = Vector2( 2.13445, 1.71569 )
texture = ExtResource( 11 )

[node name="Plant3" type="Sprite" parent="Node"]
position = Vector2( 463.143, 556.45 )
scale = Vector2( 1.65777, 1.66782 )
texture = ExtResource( 11 )

[node name="Rock5" type="Sprite" parent="."]
position = Vector2( 30.8842, 558.653 )
scale = Vector2( 2.35806, 2.425 )
texture = ExtResource( 12 )

[node name="Rock4" type="Sprite" parent="Rock5"]
position = Vector2( 220.579, -148.934 )
scale = Vector2( 0.878884, 0.755293 )
texture = ExtResource( 12 )

[node name="Rock3" type="Sprite" parent="Rock5"]
position = Vector2( 369.071, 1.72482 )
scale = Vector2( 0.947075, 0.953293 )
texture = ExtResource( 12 )

[node name="Rock5" type="Sprite" parent="Rock5"]
position = Vector2( 35.4643, -136.777 )
scale = Vector2( 0.947075, 0.953293 )
texture = ExtResource( 12 )

[node name="Plant1" type="Sprite" parent="."]
position = Vector2( 40.6586, 229.272 )
scale = Vector2( 1.51314, 1.42998 )
texture = ExtResource( 14 )

[node name="Plant5" type="Sprite" parent="Plant1"]
position = Vector2( 383.194, 68.2393 )
texture = ExtResource( 14 )

[node name="Plant6" type="Sprite" parent="Plant1"]
position = Vector2( 460.278, 22.5534 )
texture = ExtResource( 14 )

[node name="Plant7" type="Sprite" parent="Plant1"]
position = Vector2( 195.491, 20.2771 )
texture = ExtResource( 14 )

[node name="Background14" type="Sprite" parent="."]
position = Vector2( 424.218, 586.604 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 13 )

[node name="Background5" type="Sprite" parent="Background14"]
position = Vector2( -58.8827, -203.054 )
texture = ExtResource( 13 )

[node name="Background8" type="Sprite" parent="Background14"]
position = Vector2( -218.121, -223.214 )
texture = ExtResource( 13 )

[node name="Background9" type="Sprite" parent="Background14"]
position = Vector2( 384.124, -223.697 )
texture = ExtResource( 13 )

[node name="Background10" type="Sprite" parent="Background14"]
position = Vector2( 60.322, -159.798 )
texture = ExtResource( 13 )

[node name="Background12" type="Sprite" parent="Background14"]
position = Vector2( 215.888, -52.9131 )
texture = ExtResource( 13 )

[node name="Background13" type="Sprite" parent="Background14"]
position = Vector2( 361.399, -20.107 )
texture = ExtResource( 13 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 160, 200 )

[node name="Player2" parent="." instance=ExtResource( 3 )]
position = Vector2( 367.029, 170.674 )

[node name="Player3" parent="." instance=ExtResource( 6 )]
position = Vector2( 223.029, 314.674 )

[node name="Player4" parent="." instance=ExtResource( 16 )]
position = Vector2( 455.029, 394.674 )

[node name="GameTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 20.0
autostart = true

[node name="ItemBox" parent="." instance=ExtResource( 5 )]
position = Vector2( 1161.73, 203.986 )
scale = Vector2( 0.890625, 0.421875 )

[node name="ItemTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Bullet" parent="." instance=ExtResource( 17 )]
position = Vector2( 800.288, 114.674 )
scale = Vector2( 0.03, 0.03 )

[node name="Stars" type="Node2D" parent="."]

[node name="Background8" type="Sprite" parent="Stars"]
position = Vector2( 619.486, 410.626 )
rotation = 1.74845e-07
scale = Vector2( 1.28073, 1.19442 )
texture = ExtResource( 10 )
offset = Vector2( -26.5, -39.3501 )

[node name="Background5" type="Sprite" parent="Stars"]
position = Vector2( 279.914, 566.764 )
scale = Vector2( 1.28073, 1.19442 )
texture = ExtResource( 10 )
offset = Vector2( -26.5, -39.3501 )

[node name="Background6" type="Sprite" parent="Stars"]
position = Vector2( 363.281, 484.218 )
scale = Vector2( 1.28073, 1.19442 )
texture = ExtResource( 10 )
offset = Vector2( -26.5, -39.3501 )

[node name="Background7" type="Sprite" parent="Stars"]
position = Vector2( 111.371, 325.585 )
rotation = 1.74845e-07
scale = Vector2( 1.28073, 1.19442 )
texture = ExtResource( 10 )
offset = Vector2( -26.5, -39.3501 )

[node name="Background9" type="Sprite" parent="Stars"]
position = Vector2( 945.42, 326.285 )
rotation = 1.74845e-07
scale = Vector2( 1.28073, 1.19442 )
texture = ExtResource( 10 )
offset = Vector2( -26.5, -39.3501 )

[node name="Background10" type="Sprite" parent="Stars"]
position = Vector2( 486.578, 196.353 )
rotation = 1.74845e-07
scale = Vector2( 1.28073, 1.19442 )
texture = ExtResource( 10 )
offset = Vector2( -26.5, -39.3501 )

[node name="Background11" type="Sprite" parent="Stars"]
position = Vector2( 451.139, 409.288 )
rotation = 1.74845e-07
scale = Vector2( 1.28073, 1.19442 )
texture = ExtResource( 10 )
offset = Vector2( -26.5, -39.3501 )

[node name="Background12" type="Sprite" parent="Stars"]
position = Vector2( 990.336, 517.202 )
rotation = 1.74845e-07
scale = Vector2( 1.28073, 1.19442 )
texture = ExtResource( 10 )
offset = Vector2( -26.5, -39.3501 )

[node name="Background13" type="Sprite" parent="Stars"]
position = Vector2( 160.662, 325.779 )
rotation = 1.74845e-07
scale = Vector2( 1.28073, 1.19442 )
texture = ExtResource( 10 )
offset = Vector2( -26.5, -39.3501 )

[node name="Background14" type="Sprite" parent="Stars"]
position = Vector2( 975.591, 159.534 )
rotation = 1.74846e-07
scale = Vector2( 1.58024, 1.65232 )
texture = ExtResource( 10 )
offset = Vector2( -26.5, -39.3501 )

[node name="Stars" type="Sprite" parent="Stars"]
position = Vector2( 548.366, 77.477 )
scale = Vector2( 1.28073, 1.19442 )
texture = ExtResource( 10 )
offset = Vector2( -26.5, -39.3501 )

[node name="Stars2" type="Sprite" parent="Stars"]
position = Vector2( 165.28, 135.385 )
scale = Vector2( 1.28073, 1.19442 )
texture = ExtResource( 10 )
offset = Vector2( -26.5, -39.3501 )

[node name="Stars3" type="Sprite" parent="Stars"]
position = Vector2( 621.42, 197.748 )
scale = Vector2( 1.28073, 1.19442 )
texture = ExtResource( 10 )
offset = Vector2( -26.5, -39.3501 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
volume_db = -20.715
autoplay = true

[node name="ItemSpawn" type="Node2D" parent="."]

[node name="Location1" type="Node2D" parent="ItemSpawn"]
position = Vector2( 510.798, 33.8478 )

[node name="Location2" type="Node2D" parent="ItemSpawn"]
position = Vector2( 518.225, 303.128 )

[node name="Location3" type="Node2D" parent="ItemSpawn"]
position = Vector2( 123.295, 116.501 )

[node name="Location4" type="Node2D" parent="ItemSpawn"]
position = Vector2( 831.325, 116.712 )

[node name="Location5" type="Node2D" parent="ItemSpawn"]
position = Vector2( 767.029, 464.673 )

[node name="Location6" type="Node2D" parent="ItemSpawn"]
position = Vector2( 271.029, 464.674 )

[node name="fps_label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PassBomb" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="timeout" from="ItemTimer" to="." method="_on_ItemTimer_timeout"]

[editable path="Player"]
